--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -74,7 +74,7 @@
                                 подножкой. Или с возможностью установки всех этих аксессуаров.</p>
                             <p>
                             <div class="topic-info">
-                                <img src="https://velo-land.com.ua/image/cache/catalog/DOROZHNIK_2020/28-Dorozhnik-SAPPHIRE-alpiyskiy-goluboy-2020-7835-1980x1360-1725x1284.jpg"
+                                <img src={% static "img/city_bike.jpg" %}
                                      alt="Городской велосипед">
                             </div>
                             </p>
