--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,10 +15,10 @@
             <div class="col-12 col-md-4">
                 <h3>Посилання</h3>
                 <ul>
-                    <li><a href="main">Головна</a></li>
-                    <li><a href="shop">Каталог</a></li>
-                    <li><a href="contacts">Контакти</a></li>
-                    <li><a href="about">Про нас</a></li>
+                    <li><a class="nav-link active" href="{% url 'store:main' %}">Головна</a></li>
+                    <li><a class="nav-link active" href="{% url 'store:home' %}">Каталог</a></li>
+                    <li><a class="nav-link" href="{% url 'store:contacts' %}">Контакти</a></li>
+                    <li><a class="nav-link" href="{% url 'store:about' %}">Про нас</a></li>
                 </ul>
             </div>
         </div>
@@ -31,7 +31,4 @@
                                                                href="https://www.youtube.com/vijaythapa"
                                                                target="_blank">Михайлом Зайченко</a></p>
               </div>
-            </div>
-          </div>
-        </div>
 </footer>
