--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,14 +1,14 @@
 {% load i18n %}{% autoescape off %}
-{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
+{% blocktranslate %}Ви отримали цей електронний лист, оскільки надіслали запит на скидання пароля для свого облікового запису користувача за адресою {{ site_name }}.{% endblocktranslate %}
 
-{% translate "Please go to the following page and choose a new password:" %}
+{% translate "Будь ласка, перейдіть на наступну сторінку та виберіть новий пароль:" %}
 {% block reset_link %}
 {{ protocol }}://{{ domain }}{% url 'store:password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
-{% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
+{% translate "Ваше ім'я користувача, якщо ви забули:" %} {{ user.get_username }}
 
-{% translate "Thanks for using our site!" %}
+{% translate "Дякуємо за використання нашого сайту!" %}
 
-{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
+{% blocktranslate %}{{ site_name }} команда{% endblocktranslate %}
 
 {% endautoescape %}
