--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -10,7 +10,8 @@
           <h1>{{request.user.first_name}} {{request.user.last_name}}</h1>
           <p><strong>Електронна пошта:</strong> {{request.user.email}}</p>
           <p><strong>Ім'я:</strong> {{request.user.username}}</p>
-          <p><a class="btn btn-primary btn-large" href="{% url 'store:add-address' %}">Add Address »</a> <a class="btn btn-outline-primary btn-large" href="#">My Orders »</a></p>
+          <p><a class="btn btn-primary btn-large" href="{% url 'store:add-address' %}">Додати адрес ></a> <a class="btn
+          btn-outline-primary btn-large" href="#">My Orders »</a></p>
         </div>
 
 
@@ -18,8 +19,7 @@
 
           <div class="col-lg-6">
             <div class="card mb-4" id="headings">
-              <div class="card-header">Місце проживання: <span class="float-right"><a href="{% url '
-              store:add-address' %}">Додайте місце проживання</a></span></div>
+              <div class="card-header">Місце проживання: <span class="float-right"><a href="{% url 'store:add-address' %}">Додайте місце проживання</a></span></div>
               <div class="card-body">
                 {% if addresses %}
                     {% for address in addresses %}
