adding mor functions

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -80,6 +80,8 @@
                         </li>
                     {% endif %}
                 </ul>
+{#            TODO add transtate en/uk#}
+{#            TODO add booton canging color of site#}
             </div>
         </nav>
     </div>
