--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
       {% block content %}
-
+{#    TODO add scraching card with stocs(акции)#}
       <!-- HERO SECTION-->
       <div class="container">
         <section class="hero pb-3 bg-cover bg-center d-flex align-items-center" style="background: url({% static 'img/hero-jewlrey-banner.jpg' %})">
