--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -14,8 +14,8 @@
               <div class="col-lg-6 text-lg-right">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-lg-end mb-0 px-0">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Cart</li>
+                    <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Кошик</li>
                   </ol>
                 </nav>
               </div>
@@ -25,7 +25,7 @@
 
         {% if cart_products %}
         <section class="py-5">
-          <h2 class="h5 text-uppercase mb-4">Shopping cart</h2>
+          <h2 class="h5 text-uppercase mb-4">Кошик</h2>
 
           {% include 'partials/_messages.html' %}
 
@@ -36,10 +36,11 @@
                 <table class="table">
                   <thead class="bg-light">
                     <tr>
-                      <th class="border-0" scope="col"> <strong class="text-small text-uppercase">Product</strong></th>
-                      <th class="border-0" scope="col"> <strong class="text-small text-uppercase">Price</strong></th>
-                      <th class="border-0" scope="col"> <strong class="text-small text-uppercase">Quantity</strong></th>
-                      <th class="border-0" scope="col"> <strong class="text-small text-uppercase">Total</strong></th>
+                      <th class="border-0" scope="col"> <strong class="text-small text-uppercase">Продукт</strong></th>
+                      <th class="border-0" scope="col"> <strong class="text-small text-uppercase">Ціна</strong></th>
+                      <th class="border-0" scope="col"> <strong class="text-small
+                      text-uppercase">Кількість</strong></th>
+                      <th class="border-0" scope="col"> <strong class="text-small text-uppercase">Всього</strong></th>
                       <th class="border-0" scope="col"> </th>
                     </tr>
                   </thead>
@@ -63,7 +64,8 @@
                         <p class="mb-0 small">${{cart_product.product.price}}</p>
                       </td>
                       <td class="align-middle border-0">
-                        <div class="border d-flex align-items-center justify-content-between px-3"><span class="small text-uppercase text-gray headings-font-family">Quantity</span>
+                        <div class="border d-flex align-items-center justify-content-between px-3"><span class="small
+                         text-uppercase text-gray headings-font-family">Кількість</span>
                           <div class="quantity">
                             <a href="{% url 'store:minus-cart' cart_product.id %}" class="dec-btn p-0 ml-2"><i class="fas fa-minus"></i></a>
                             {% comment %} <button class="dec-btn p-0"><i class="fas fa-caret-left"></i></button> {% endcomment %}
@@ -86,8 +88,11 @@
               <!-- CART NAV-->
               <div class="bg-light px-4 py-3">
                 <div class="row align-items-center text-center">
-                  <div class="col-md-6 mb-3 mb-md-0 text-md-left"><a class="btn btn-link p-0 text-dark btn-sm" href="{% url 'store:home' %}"><i class="fas fa-long-arrow-alt-left mr-2"> </i>Continue shopping</a></div>
-                  <div class="col-md-6 text-md-right"><a class="btn btn-outline-dark btn-sm" href="checkout.html">Procceed to checkout<i class="fas fa-long-arrow-alt-right ml-2"></i></a></div>
+                  <div class="col-md-6 mb-3 mb-md-0 text-md-left"><a class="btn btn-link p-0 text-dark btn-sm"
+                                                                     href="{% url 'store:home' %}"><i class="fas
+                                                                     fa-long-arrow-alt-left mr-2">
+                  </i>Продовжити подорож магазином</a></div>
+                  <div class="col-md-6 text-md-right"><a class="btn btn-outline-dark btn-sm" href="checkout.html">Перейти до оформлення замовлення<i class="fas fa-long-arrow-alt-right ml-2"></i></a></div>
                 </div>
               </div>
             </div>
@@ -95,12 +100,13 @@
             <div class="col-lg-4">
               <div class="card border-0 rounded-0 p-lg-4 bg-light">
                 <div class="card-body">
-                  <h5 class="text-uppercase mb-4">Cart total</h5>
+                  <h5 class="text-uppercase mb-4">Всього в кошику</h5>
                   <ul class="list-unstyled mb-0">
-                    <li class="d-flex align-items-center justify-content-between"><strong class="text-uppercase small font-weight-bold">Subtotal</strong><span class="text-muted small">${{amount|intcomma}}</span></li>
-                    <li class="d-flex align-items-center justify-content-between"><strong class="text-uppercase small font-weight-bold">Shipping Charge</strong><span class="text-muted small">+ ${{shipping_amount}}</span></li>
+                    <li class="d-flex align-items-center justify-content-between"><strong class="text-uppercase small font-weight-bold">Проміжний підсумок</strong><span class="text-muted small">${{amount|intcomma}}</span></li>
+                    <li class="d-flex align-items-center justify-content-between"><strong class="text-uppercase small font-weight-bold">Вартість доставки</strong><span class="text-muted small">+ ${{shipping_amount}}</span></li>
                     <li class="border-bottom my-2"></li>
-                    <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase small font-weight-bold">Total</strong><span>${{total_amount|intcomma}}</span></li>
+                    <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase
+                    small font-weight-bold">Всього</strong><span>${{total_amount|intcomma}}</span></li>
                     <li>
 
                       {% comment %} <form action="#">
@@ -114,14 +120,14 @@
                   </ul>
 
                   
-                  <h5 class="text-uppercase my-5">Select Shipping Address</h5>
+                  <h5 class="text-uppercase my-5">Виберіть адресу доставки</h5>
                   
                   <form action="{% url 'store:checkout' %}" id="myform">
 
                     {% if addresses %}
                       {% for address in addresses %}
                         <div class="mb-3">
-                        <input type="radio" name="address" value="{{address.id}}"> <strong>Address {{forloop.counter}}</strong> <br>
+                        <input type="radio" name="address" value="{{address.id}}"> <strong>Адресса {{forloop.counter}}</strong> <br>
                         ( {{address.locality}}, {{address.city}}, {{address.state}} )
                         </div>
                       {% endfor %}
@@ -131,7 +137,7 @@
                     <div class="text-end" id="paypal-button-container"></div>
 
                     {% comment %} For Cash on Delivery {% endcomment %}
-                    <button type="submit" class="btn btn-dark btn-lg btn-outline-dark" type="submit"> <i class="fas fa-dollar-sign mr-2"></i>Cash on Delivery</button>
+                    <button type="submit" class="btn btn-dark btn-lg btn-outline-dark" type="submit"> <i class="fas fa-dollar-sign mr-2"></i>Накладений платіж</button>
 
                   </form>
 
@@ -145,8 +151,9 @@
         {% else %}
 
           <div class="text-center py-5">
-            <h3 class="mb-3">Your cart is empty.</h3>
-            <a href="{% url 'store:home' %}"><i class="fas fa-long-arrow-alt-left mr-2"> </i>Continue shopping</a>
+            <h3 class="mb-3">Ваш кошик порожній.</h3>
+            <a href="{% url 'store:home' %}"><i class="fas fa-long-arrow-alt-left mr-2"> </i>Продовжити подорож по
+                сайту</a>
           </div>
 
         {% endif %}
