--- a/templates/store/category_products.html
+++ b/templates/store/category_products.html
@@ -9,13 +9,13 @@
           <div class="container">
             <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
               <div class="col-lg-6">
-                <h1 class="h2 text-uppercase mb-0">Shop - {{category.title}}</h1>
+                <h1 class="h2 text-uppercase mb-0">Магазин - {{category.title}}</h1>
               </div>
               <div class="col-lg-6 text-lg-right">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-lg-end mb-0 px-0">
-                    <li class="breadcrumb-item"><a href="{% url 'store:home' %}">Home</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'store:all-categories' %}">Category</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'store:home' %}">Головна</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'store:all-categories' %}">Категорії</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{category.title}}</li>
                   </ol>
                 </nav>
@@ -28,7 +28,7 @@
             <div class="row">
               <!-- SHOP SIDEBAR-->
               <div class="col-lg-3 order-2 order-lg-1">
-                <h5 class="text-uppercase mb-4">Categories</h5>
+                <h5 class="text-uppercase mb-4">Категорії</h5>
 
                 {% if categories %}
                   {% for cat in categories %}
@@ -40,62 +40,64 @@
                   {% endfor %}
                 {% endif %}
 
-                <h6 class="text-uppercase mb-4">Price range</h6>
+                <h6 class="text-uppercase mb-4">Діапазон цін</h6>
                 <div class="price-range pt-4 mb-5">
                   <div id="range"></div>
                   <div class="row pt-2">
-                    <div class="col-6"><strong class="small font-weight-bold text-uppercase">From</strong></div>
-                    <div class="col-6 text-right"><strong class="small font-weight-bold text-uppercase">To</strong></div>
+                    <div class="col-6"><strong class="small font-weight-bold text-uppercase">Від</strong></div>
+                    <div class="col-6 text-right"><strong class="small font-weight-bold
+                    text-uppercase">До</strong></div>
                   </div>
                 </div>
-                <h6 class="text-uppercase mb-3">Show only</h6>
+                <h6 class="text-uppercase mb-3">Показувати</h6>
                 <div class="custom-control custom-checkbox mb-1">
                   <input class="custom-control-input" id="customCheck1" type="checkbox">
-                  <label class="custom-control-label text-small" for="customCheck1">Returns Accepted</label>
+                  <label class="custom-control-label text-small" for="customCheck1">Приймаються повернення</label>
                 </div>
                 <div class="custom-control custom-checkbox mb-1">
                   <input class="custom-control-input" id="customCheck2" type="checkbox">
-                  <label class="custom-control-label text-small" for="customCheck2">Returns Accepted</label>
+                  <label class="custom-control-label text-small" for="customCheck2">Приймаються повернення</label>
                 </div>
                 <div class="custom-control custom-checkbox mb-1">
                   <input class="custom-control-input" id="customCheck3" type="checkbox">
-                  <label class="custom-control-label text-small" for="customCheck3">Completed Items</label>
+                  <label class="custom-control-label text-small" for="customCheck3">Завершені продукти</label>
                 </div>
                 <div class="custom-control custom-checkbox mb-1">
                   <input class="custom-control-input" id="customCheck4" type="checkbox">
-                  <label class="custom-control-label text-small" for="customCheck4">Sold Items</label>
+                  <label class="custom-control-label text-small" for="customCheck4">Продані продукти</label>
                 </div>
                 <div class="custom-control custom-checkbox mb-1">
                   <input class="custom-control-input" id="customCheck5" type="checkbox">
-                  <label class="custom-control-label text-small" for="customCheck5">Deals &amp; Savings</label>
+                  <label class="custom-control-label text-small" for="customCheck5">Угоди &amp; Економія</label>
                 </div>
                 <div class="custom-control custom-checkbox mb-4">
                   <input class="custom-control-input" id="customCheck6" type="checkbox">
-                  <label class="custom-control-label text-small" for="customCheck6">Authorized Seller</label>
+                  <label class="custom-control-label text-small" for="customCheck6">Авторизований продавець</label>
                 </div>
-                <h6 class="text-uppercase mb-3">Buying format</h6>
+                <h6 class="text-uppercase mb-3">Форма купівлі</h6>
                 <div class="custom-control custom-radio">
                   <input class="custom-control-input" id="customRadio1" type="radio" name="customRadio">
-                  <label class="custom-control-label text-small" for="customRadio1">All Listings</label>
+                  <label class="custom-control-label text-small" for="customRadio1">Всі списки</label>
                 </div>
                 <div class="custom-control custom-radio">
                   <input class="custom-control-input" id="customRadio2" type="radio" name="customRadio">
-                  <label class="custom-control-label text-small" for="customRadio2">Best Offer</label>
+                  <label class="custom-control-label text-small" for="customRadio2">Найкраща пропозиції</label>
                 </div>
                 <div class="custom-control custom-radio">
                   <input class="custom-control-input" id="customRadio3" type="radio" name="customRadio">
-                  <label class="custom-control-label text-small" for="customRadio3">Auction</label>
+                  <label class="custom-control-label text-small" for="customRadio3">Аукціон</label>
                 </div>
                 <div class="custom-control custom-radio">
                   <input class="custom-control-input" id="customRadio4" type="radio" name="customRadio">
-                  <label class="custom-control-label text-small" for="customRadio4">Buy It Now</label>
+                  <label class="custom-control-label text-small" for="customRadio4">Купити це зараз</label>
                 </div>
               </div>
               <!-- SHOP LISTING-->
               <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                 <div class="row mb-3 align-items-center">
                   <div class="col-lg-6 mb-2 mb-lg-0">
-                    <p class="text-small text-muted mb-0">Showing 1–12 of 53 results</p>
+{#                      Todo add count of results#}
+                    <p class="text-small text-muted mb-0">Показано 1–12 із 53 результатів</p>
                   </div>
                   <div class="col-lg-6">
                     <ul class="list-inline d-flex align-items-center justify-content-lg-end mb-0">
@@ -103,10 +105,10 @@
                       <li class="list-inline-item text-muted mr-3"><a class="reset-anchor p-0" href="#"><i class="fas fa-th"></i></a></li>
                       <li class="list-inline-item">
                         <select class="selectpicker ml-auto" name="sorting" data-width="200" data-style="bs-select-form-control" data-title="Default sorting">
-                          <option value="default">Default sorting</option>
-                          <option value="popularity">Popularity</option>
-                          <option value="low-high">Price: Low to High</option>
-                          <option value="high-low">Price: High to Low</option>
+                          <option value="default">Сортування за замовчуванням</option>
+                          <option value="popularity">Популярність</option>
+                          <option value="low-high">Ціна: від низької до високої</option>
+                          <option value="high-low">Ціна: від високої до низької</option>
                         </select>
                       </li>
                     </ul>
