--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -9,14 +9,14 @@
           <div class="container">
             <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
               <div class="col-lg-6">
-                <h1 class="h2 text-uppercase mb-0">Checkout</h1>
+                <h1 class="h2 text-uppercase mb-0">Перевірити</h1>
               </div>
               <div class="col-lg-6 text-lg-right">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-lg-end mb-0 px-0">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="cart.html">Cart</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Checkout</li>
+                    <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
+                    <li class="breadcrumb-item"><a href="cart.html">Кошик</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Перевірити</li>
                   </ol>
                 </nav>
               </div>
@@ -25,106 +25,109 @@
         </section>
         <section class="py-5">
           <!-- BILLING ADDRESS-->
-          <h2 class="h5 text-uppercase mb-4">Billing details</h2>
+          <h2 class="h5 text-uppercase mb-4">Платіжні реквізити</h2>
           <div class="row">
             <div class="col-lg-8">
               <form action="#">
                 <div class="row">
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="firstName">First name</label>
-                    <input class="form-control form-control-lg" id="firstName" type="text" placeholder="Enter your first name">
+                    <label class="text-small text-uppercase" for="firstName">Ім'я</label>
+                    <input class="form-control form-control-lg" id="firstName" type="text" placeholder="Введіть своє
+                    ім'я">
                   </div>
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="lastName">Last name</label>
-                    <input class="form-control form-control-lg" id="lastName" type="text" placeholder="Enter your last name">
+                    <label class="text-small text-uppercase" for="lastName">Прізвище</label>
+                    <input class="form-control form-control-lg" id="lastName" type="text" placeholder="Введіть своє прізвище">
                   </div>
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="email">Email address</label>
-                    <input class="form-control form-control-lg" id="email" type="email" placeholder="e.g. Jason@example.com">
+                    <label class="text-small text-uppercase" for="email">Адреса електронної пошти</label>
+                    <input class="form-control form-control-lg" id="email" type="email" placeholder="exemple@gamil
+                    .com">
                   </div>
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="phone">Phone number</label>
-                    <input class="form-control form-control-lg" id="phone" type="tel" placeholder="e.g. +02 245354745">
+                    <label class="text-small text-uppercase" for="phone">Номер телефону</label>
+                    <input class="form-control form-control-lg" id="phone" type="tel" placeholder="+123 456 78 90">
                   </div>
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="company">Company name (optional)</label>
-                    <input class="form-control form-control-lg" id="company" type="text" placeholder="Your company name">
+                    <label class="text-small text-uppercase" for="company">Назва компанії (необов'язково)</label>
+                    <input class="form-control form-control-lg" id="company" type="text" placeholder="Назва вашої компанії">
                   </div>
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="country">Country</label>
+                    <label class="text-small text-uppercase" for="country">Країна</label>
                     <select class="selectpicker country" id="country" data-width="fit" data-style="form-control form-control-lg" data-title="Select your country"></select>
                   </div>
                   <div class="col-lg-12 form-group">
-                    <label class="text-small text-uppercase" for="address">Address line 1</label>
-                    <input class="form-control form-control-lg" id="address" type="text" placeholder="House number and street name">
+                    <label class="text-small text-uppercase" for="address">Рядок адреси 1</label>
+                    <input class="form-control form-control-lg" id="address" type="text" placeholder="Номер будинку та назва вулиці">
                   </div>
                   <div class="col-lg-12 form-group">
-                    <label class="text-small text-uppercase" for="address">Address line 2</label>
-                    <input class="form-control form-control-lg" id="addressalt" type="text" placeholder="Apartment, Suite, Unit, etc (optional)">
+                    <label class="text-small text-uppercase" for="address">Рядок адреси 2</label>
+                    <input class="form-control form-control-lg" id="addressalt" type="text" placeholder="Квартира(необов’язково)">
                   </div>
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="city">Town/City</label>
+                    <label class="text-small text-uppercase" for="city">Місто</label>
                     <input class="form-control form-control-lg" id="city" type="text">
                   </div>
                   <div class="col-lg-6 form-group">
-                    <label class="text-small text-uppercase" for="state">State/County</label>
+                    <label class="text-small text-uppercase" for="state">Штат/Країна</label>
                     <input class="form-control form-control-lg" id="state" type="text">
                   </div>
                   <div class="col-lg-6 form-group">
                     <div class="custom-control custom-checkbox">
                       <input class="custom-control-input" id="alternateAddressCheckbox" type="checkbox">
-                      <label class="custom-control-label text-small" for="alternateAddressCheckbox">Alternate billing address</label>
+                      <label class="custom-control-label text-small" for="alternateAddressCheckbox">Альтернативна платіжна адреса</label>
                     </div>
                   </div>
                   <div class="col-lg-12">
                     <div class="row d-none" id="alternateAddress">
                       <div class="col-12 mt-4">
-                        <h2 class="h4 text-uppercase mb-4">Alternative billing details</h2>
+                        <h2 class="h4 text-uppercase mb-4">Альтернативні платіжні реквізити</h2>
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="firstName2">First name</label>
-                        <input class="form-control form-control-lg" id="firstName2" type="text" placeholder="Enter your first name">
+                        <label class="text-small text-uppercase" for="firstName2">Ім'я</label>
+                        <input class="form-control form-control-lg" id="firstName2" type="text" placeholder="Введіть своє ім'я">
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="lastName2">Last name</label>
-                        <input class="form-control form-control-lg" id="lastName2" type="text" placeholder="Enter your last name">
+                        <label class="text-small text-uppercase" for="lastName2">Прізвище</label>
+                        <input class="form-control form-control-lg" id="lastName2" type="text" placeholder="Введіть своє прізвище">
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="email2">Email address</label>
-                        <input class="form-control form-control-lg" id="email2" type="email" placeholder="e.g. Jason@example.com">
+                        <label class="text-small text-uppercase" for="email2">Адреса електронної пошти</label>
+                        <input class="form-control form-control-lg" id="email2" type="email" placeholder="exemple@gamil
+                    .com">
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="phone2">Phone number</label>
-                        <input class="form-control form-control-lg" id="phone2" type="tel" placeholder="e.g. +02 245354745">
+                        <label class="text-small text-uppercase" for="phone2">Номер телефону</label>
+                        <input class="form-control form-control-lg" id="phone2" type="tel" placeholder="+123 456 78 90">
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="company2">Company name (optional)</label>
-                        <input class="form-control form-control-lg" id="company2" type="text" placeholder="Your company name">
+                        <label class="text-small text-uppercase" for="company2">Назва компанії (необов'язково)</label>
+                        <input class="form-control form-control-lg" id="company2" type="text" placeholder="Назва вашої компанії">
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="country2">Country</label>
-                        <select class="selectpicker country" id="country2" data-width="fit" data-style="form-control form-control-lg" data-title="Select your country"></select>
+                        <label class="text-small text-uppercase" for="country2">Країна</label>
+                        <select class="selectpicker country" id="country2" data-width="fit" data-style="form-control form-control-lg" data-title="Виберіть свою країну"></select>
                       </div>
                       <div class="col-lg-12 form-group">
-                        <label class="text-small text-uppercase" for="address2">Address line 1</label>
-                        <input class="form-control form-control-lg" id="address2" type="text" placeholder="House number and street name">
+                        <label class="text-small text-uppercase" for="address2">Рядок адреси 1</label>
+                        <input class="form-control form-control-lg" id="address2" type="text" placeholder="Номер будинку та назва вулиці">
                       </div>
                       <div class="col-lg-12 form-group">
-                        <label class="text-small text-uppercase" for="address2">Address line 2</label>
-                        <input class="form-control form-control-lg" id="addressalt2" type="text" placeholder="Apartment, Suite, Unit, etc (optional)">
+                        <label class="text-small text-uppercase" for="address2">Рядок адреси 2</label>
+                        <input class="form-control form-control-lg" id="addressalt2" type="text" placeholder="Квартира">
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="city3">Town/City</label>
+                        <label class="text-small text-uppercase" for="city3">Місто</label>
                         <input class="form-control form-control-lg" id="city3" type="text">
                       </div>
                       <div class="col-lg-6 form-group">
-                        <label class="text-small text-uppercase" for="state4">State/County</label>
+                        <label class="text-small text-uppercase" for="state4">Штат/Країна</label>
                         <input class="form-control form-control-lg" id="state4" type="text">
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-12 form-group">
-                    <button class="btn btn-dark" type="submit">Place order</button>
+                    <button class="btn btn-dark" type="submit">Зробити замовлення</button>
                   </div>
                 </div>
               </form>
