Add categories and products

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -6,7 +6,7 @@
     max-height: 100px;
     width: 100%;
 
-    background: url("../img/header.png")no-repeat;
+    background: url("../img/header2.png")no-repeat;
     background-position: center;
     background-size: cover;
 }
