--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
 
 <header class="header_img">
     <div class="header-container">
-    <img src="../static/img/header.png" alt="Header Image" class="header-image">
+    <img src="../static/img/header2.png" alt="Header Image" class="header-image">
     <h1 class="header-title">WellBike</h1>
   </div>
 </header>
@@ -23,7 +23,7 @@
                         <a class="nav-link active" href="{% url 'store:home' %}">WellBike</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'store:main' %}">Головна</a>
+                        <a class="nav-link active" href="{% url 'store:main' %}">Як вибрати велосипед?</a>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
                                                      data-toggle="dropdown" aria-haspopup="true"
