--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -1,102 +1,123 @@
 {% extends 'base.html' %}
 {% load static %}
 
-      {% block content %}
-{#    TODO add scraching card with stocs(акции)#}
-      <!-- HERO SECTION-->
-      <div class="container">
-        <section class="hero pb-3 bg-cover bg-center d-flex align-items-center" style="background: url({% static 'img/hero-jewlrey-banner.jpg' %})">
-          <div class="container py-5">
-            <div class="row px-4 px-lg-5">
-              <div class="col-lg-6">
-                <p class="text-muted small text-uppercase mb-2">Посмотреть велосипеди</p>
-                <h1 class="h2 text-uppercase mb-3">20% сезонні знижки</h1><a class="btn btn-dark" href="{% url
-                'store:all-categories' %}">Подивитись колекцію</a>
-              </div>
-            </div>
-          </div>
-        </section>
+{% block head %}
+    <link href="{% static 'css/scratch_card.css' %}" rel="stylesheet" type="text/css">
+{% endblock head %}
 
+{% block content %}
+    <!-- HERO SECTION-->
+    <div class="container">
+        <section class="hero pb-3 bg-cover bg-center d-flex align-items-center"
+                 style="background: url({% static 'img/hero-jewlrey-banner.jpg' %})">
+            <div class="container py-5">
+                <div class="row px-4 px-lg-5">
+                    <div class="col-lg-6">
+                        <p class="text-muted small text-uppercase mb-2">Посмотреть велосипеди</p>
+                        <h1 class="h2 text-uppercase mb-3">Сезонні знижки</h1>
+                        <h2 class="h2 text-uppercase mb-3">До -20%</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+{#        <h2>Потріть квадратик, щоб дізнатися свою знижку</h2>#}
+{#                        <div class="container_scratch">#}
+{#                            <div class="base">#}
+{#                                <h4>You Won</h4>#}
+{#                                <h3>-10%</h3>#}
+{#                            </div>#}
+{#                            <canvas id="scratch" width="200" height="200"></canvas>#}
+{#                        </div>#}
+{#                        {% block script %}#}
+{#                            <link href="{% static 'js/scrach_card.js' %}" rel="stylesheet" type="text/css">#}
+{#                        {% endblock script%}#}
 
         <!-- CATEGORIES SECTION-->
         <section class="pt-5">
-          <header class="text-center">
-            <p class="small text-muted small text-uppercase mb-1">Carefully created collections</p>
-            <h2 class="h5 text-uppercase mb-4">Browse our categories</h2>
-          </header>
-          <div class="row">
-          {% if categories %}
-            {% for category in categories %}
+            <header class="text-center">
+                <p class="small text-muted small text-uppercase mb-1">Carefully created collections</p>
+                <h2 class="h5 text-uppercase mb-4">Browse our categories</h2>
+            </header>
+            <div class="row">
+                {% if categories %}
+                    {% for category in categories %}
 
-              <div class="col-md-4 mb-4 mb-md-0">
-                <a class="category-item" href="{% url 'store:category-products' category.slug %}">
-                  {% if category.category_image %}
-                    <img class="img-fluid" src="{{ category.category_image.url }}" alt="{{ category.title }}">
-                    {% else %}
-                    <img class="img-fluid" src="{% static 'img/cat-img-1.jpg' %}" alt="{{ category.title }}">
-                  {% endif %}
-                  <strong class="category-item-title">{{ category.title }}</strong>
-                </a>
-              </div>
-            
-            {% endfor %}
-          {% endif %}
-          </div>
+                        <div class="col-md-4 mb-4 mb-md-0">
+                            <a class="category-item" href="{% url 'store:category-products' category.slug %}">
+                                {% if category.category_image %}
+                                    <img class="img-fluid" src="{{ category.category_image.url }}"
+                                         alt="{{ category.title }}">
+                                {% else %}
+                                    <img class="img-fluid" src="{% static 'img/cat-img-1.jpg' %}"
+                                         alt="{{ category.title }}">
+                                {% endif %}
+                                <strong class="category-item-title">{{ category.title }}</strong>
+                            </a>
+                        </div>
+
+                    {% endfor %}
+                {% endif %}
+            </div>
         </section>
 
 
         <!-- TRENDING PRODUCTS-->
         <section class="py-5">
-          <header>
-            <h2 class="h5 text-uppercase mb-4">Лучшие продукти</h2>
-          </header>
-          <div class="row">
+            <header>
+                <h2 class="h5 text-uppercase mb-4">Лучшие продукти</h2>
+            </header>
+            <div class="row">
 
-            {% if products %}
-              {% for product in products %}
-              
-                <!-- PRODUCT-->
-                <div class="col-xl-3 col-lg-4 col-sm-6">
-                  <div class="product text-center">
-                    <div class="position-relative mb-3">
+                {% if products %}
+                    {% for product in products %}
 
-                      <div class="badge text-white badge-"></div>
-                      
-                      <a class="d-block" href="{% url 'store:product-detail' product.slug %}">
-                        {% if product.product_image %}
-                          <img class="img-fluid w-100" src="{{ product.product_image.url }}" alt="{{product.title}}">
-                        {% else %}
-                          <img class="img-fluid w-100" src="{% static 'img/product-1.jpg' %}" alt="{{product.title}}">
-                        {% endif %}
-                      </a>
+                        <!-- PRODUCT-->
+                        <div class="col-xl-3 col-lg-4 col-sm-6">
+                            <div class="product text-center">
+                                <div class="position-relative mb-3">
 
-                      <div class="product-overlay">
-                        <ul class="mb-0 list-inline">
-                          <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="#"><i class="far fa-heart"></i></a></li>
-                          <li class="list-inline-item m-0 p-0">
-                            {% comment %} <a class="btn btn-sm btn-dark" href="{% url 'store:add-to-cart' %}">Add to cart</a> {% endcomment %}
+                                    <div class="badge text-white badge-"></div>
 
-                            <form action="{% url 'store:add-to-cart' %}">
-                              <input type="hidden" name="prod_id" value="{{product.id}}" id="product_id">
-                              <button type="submit" class="btn btn-sm btn-dark">Add to Cart</button>
-                            </form>
+                                    <a class="d-block" href="{% url 'store:product-detail' product.slug %}">
+                                        {% if product.product_image %}
+                                            <img class="img-fluid w-100" src="{{ product.product_image.url }}"
+                                                 alt="{{ product.title }}">
+                                        {% else %}
+                                            <img class="img-fluid w-100" src="{% static 'img/product-1.jpg' %}"
+                                                 alt="{{ product.title }}">
+                                        {% endif %}
+                                    </a>
 
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                    <h6> <a class="reset-anchor" href="detail.html">{{ product.title }}</a></h6>
-                    <p class="small text-muted">${{product.price}}</p>
-                  </div>
-                </div>
+                                    <div class="product-overlay">
+                                        <ul class="mb-0 list-inline">
+                                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"
+                                                                                    href="#"><i
+                                                    class="far fa-heart"></i></a></li>
+                                            <li class="list-inline-item m-0 p-0">
+                                                {% comment %} <a class="btn btn-sm btn-dark" href="{% url 'store:add-to-cart' %}">Add to cart</a> {% endcomment %}
 
-              {% endfor %}
-            {% endif %}
+                                                <form action="{% url 'store:add-to-cart' %}">
+                                                    <input type="hidden" name="prod_id" value="{{ product.id }}"
+                                                           id="product_id">
+                                                    <button type="submit" class="btn btn-sm btn-dark">Add to Cart
+                                                    </button>
+                                                </form>
 
-            
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <h6><a class="reset-anchor" href="detail.html">{{ product.title }}</a></h6>
+                                <p class="small text-muted">${{ product.price }}</p>
+                            </div>
+                        </div>
 
-          </div>
+                    {% endfor %}
+                {% endif %}
+
+
+            </div>
         </section>
-      </div>
+    </div>
 
-      {% endblock content %}
+{% endblock content %}
