Add categories and products, mod site

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,16 +1,20 @@
+{% load static %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+{% endblock head %}
 <footer class="bg-dark text-white">
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-4">
                 <h3>Вело Магазин</h3>
-                <p>Ми є вело магазином з великим досвідом. Наші фахівці допоможуть вам підібрати
+                <p>Ми - вело магазином з великим досвідом. Наші фахівці допоможуть вам підібрати
                     потрібний велосипед, зробити його налаштування та ремонт.</p>
             </div>
             <div class="col-12 col-md-4">
                 <h3>Контакти</h3>
-                <p>Адреса: м.Київ, вул. Хрещатик, 123</p>
+                <p>Адреса: м.Дніпро, вул. Бебра, 123</p>
                 <p>Телефон: +380 44 123 45 67</p>
-                <p>Email: info@velo-magazin.com</p>
+                <p>Email <a href="https://mail.google.com/">info@velo-magazin.com</a></p>
             </div>
             <div class="col-12 col-md-4">
                 <h3>Посилання</h3>
