--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -55,7 +55,7 @@
                         <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
                                                          data-toggle="dropdown" aria-haspopup="true"
                                                          aria-expanded="false"><i class="fas fa-user-alt mr-1
-                                                   text-gray"></i>Ваш акаунт</a></a>
+                                                   text-gray"></i>{{ your_account }}</a></a>
 
                             <div class="dropdown-menu mt-3" aria-labelledby="pagesDropdown">
 
