--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -75,8 +75,9 @@
                                 можливостью установки всiх цих аксесуарiв.</p>
                             <p>
                             <div class="topic-info">
-                                <img src={% static "img/city_bike.jpg" %},
+                                <img src={% static "img/city_bike.jpg" %}
                                      alt="Городской велосипед">
+
                             </div>
                             </p>
                             <h2>4 Електровелосипеди</h2>
