--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -11,7 +11,7 @@
           <p><strong>Електронна пошта:</strong> {{request.user.email}}</p>
           <p><strong>Ім'я:</strong> {{request.user.username}}</p>
           <p><a class="btn btn-primary btn-large" href="{% url 'store:add-address' %}">Додати адрес ></a> <a class="btn
-          btn-outline-primary btn-large" href="#">My Orders »</a></p>
+          btn-outline-primary btn-large" href="#">Мої замовлення »</a></p>
         </div>
 
 
@@ -28,9 +28,9 @@
                         <span class="float-right"><a href="{% url 'store:remove-address' address.id %}"><i class="fas fa-trash-alt small text-muted"></i></a></span>
 
                         <p>
-                            <strong>Locality: </strong>{{address.locality}} <br>
-                            <strong>City: </strong>{{address.city}} <br>
-                            <strong>State: </strong>{{address.state}} <br>
+                            <strong>Місцевість: </strong>{{address.locality}} <br>
+                            <strong>Місто: </strong>{{address.city}} <br>
+                            <strong>Штат: </strong>{{address.state}} <br>
                         </p>
 
                         <hr>
