Fill up Db, Added adaptive

--- a/templates/account/add_address.html
+++ b/templates/account/add_address.html
@@ -8,9 +8,6 @@
         <div class="container py-5">
             <div class="col-md-8 offset-2">
 
-                <h1 class="mb-5">Додати нову адресу</h1>
-
-
                 <div class="card-body">
 
                     {% include 'partials/_messages.html' %}
@@ -20,15 +17,15 @@
                             {% csrf_token %}
                             <div class="form-box">
                                 <div class="form-value">
-                                    <div class="card-header">
-                                        <small>
-                                            За допомогою цього облікового запису ви можете заощаджувати час під час
-                                            оформлення
-                                            замовлення, отримувати доступ до свого кошика з будь-якого пристрою та
-                                            переглядати історію
-                                            замовлень.
-                                        </small>
-                                    </div>
+{#                                    <div class="card-header">#}
+{#                                        <small>#}
+{#                                            За допомогою цього облікового запису ви можете заощаджувати час під час#}
+{#                                            оформлення#}
+{#                                            замовлення, отримувати доступ до свого кошика з будь-якого пристрою та#}
+{#                                            переглядати історію#}
+{#                                            замовлень.#}
+{#                                        </small>#}
+{#                                    </div>#}
                                     <h2 class="mb-5">Додати нову адресу</h2>
                                     {% for fm in form %}
                                         <div class="form-group">
