--- a/templates/footer.html
+++ b/templates/footer.html
@@ -28,11 +28,11 @@
         </div>
     </div>
     <div class="credits">
-        <p>© 2023 Вело Магазин</p>
+        <p >© 2023 Вело Магазин</p>
     </div>
               <div class="col-lg-6 text-lg-right">
                 <p class="small text-muted mb-0">Сайт зроблений <a class="text-white reset-anchor"
-                                                               href="https://www.youtube.com/vijaythapa"
+                                                               href="https://www.linkedin.com/in/michailo-zaichenko-a90048266/"
                                                                target="_blank">Михайлом Зайченко</a></p>
               </div>
 </footer>
