--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -145,6 +145,9 @@
                                 <table class="table table-striped">
                                     <thead class="thead-dark">
                                     <tr class="text-center">
+                                        <th colspan="4">Таблиця, яка допоможе вам вибрати правильний розмір рами!</th>
+                                    </tr>
+                                    <tr class="text-center">
                                         <th scope=“col”>Розмір рами, дюйми</th>
                                         <th scope=“col”>Ваш зріст, см</th>
                                         <th scope=“col”>Розмір рами, см</th>
