--- a/static/css/log_in.css
+++ b/static/css/log_in.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 *{
-    margin: 0;
-    padding: 0;
+    /*margin: 0;*/
+    /*padding: 0;*/
     font-family: 'poppins',sans-serif;
 }
 
@@ -39,7 +39,13 @@ form{
     align-items: center;
 
 }
-h2{
+
+h6{
+    color: #040e0e;
+    text-align: center;
+}
+
+h1, h2{
     font-size: 2em;
     color: #040e0e;
     text-align: center;
@@ -145,4 +151,17 @@ button{
 	display: grid;
 	place-items: center;
     text-align: center;
+}
+
+.card mb-4{
+        position: relative;
+    width: 400px;
+    height: 600px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.55);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
