--- a/static/css/style.gold.css
+++ b/static/css/style.gold.css
@@ -3251,8 +3251,8 @@ code {
 * 9. CARD
 */
 .card {
-  background-color: #fff;
-  border: 1px solid rgba(17, 17, 17, 0.125);
+  /*background-color: #fff;*/
+  /*border: 1px solid rgba(17, 17, 17, 0.125);*/
   border-radius: 0;
 }
 
