--- a/templates/account/password_reset_complete.html
+++ b/templates/account/password_reset_complete.html
@@ -1,27 +1,31 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/log_in.css' %}">
+{% endblock head %}
+{% block content %}
+    <div class="all_log_in">
+        <div class="container py-5">
+            <div class="col-md-8 offset-2">
 
-    {% block content %}
+                {% comment %} <h1 class="mb-5">Password Changed</h1> {% endcomment %}
 
-      <div class="container py-5">
-        <div class="col-md-8 offset-2">
 
-        {% comment %} <h1 class="mb-5">Password Changed</h1> {% endcomment %}
-        
-        
-        <div class="card mb-4" id="forms">
-          
-          <div class="card-body">
-           
-            <h1>Новий пароль успішно встановлено.</h1>
-            
-            <div class="text-center">
-              Давайте <a href="{% url 'store:login' %}"> ввійдемо в акаунт</a>
+                <div class="card-body">
+                    <form method="post" action="">
+                        <div class="form-box">
+                            <div class="form-value">
+                                <h2>Новий пароль успішно встановлено</h2>
+
+                                <div class="text-center">
+                                    Давайте <a href="{% url 'store:login' %}"> ввійдемо в акаунт</a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            
-          </div>
-        </div>
 
-        </div>       
-      </div>
+        </div>
+    </div>
 {% endblock content %}
