--- a/templates/store/about.html
+++ b/templates/store/about.html
@@ -2,13 +2,18 @@
 {% load static %}
 {% block content %}
     <main class="container">
+
         <div class="row">
+            <div>
+            <img src="{% static "img/header2.png" %}" style="margin-left: 50px;">
             <div class="col">
                 <p>Наш магазин пропонує великий вибір велосипедів для будь-якого типу їзди - від гірських велосипедів
                     для екстремальної їзди до шосейних велосипедів для швидкої їзди по дорозі. У нашому магазині ви
                     знайдете все, що вам потрібно для вашої їзди на велосипеді - від аксесуарів та запчастин до зручних
                     велосипедних шоломів та одягу.</p>
             </div>
+        </div>
+
         </div>
         <div class="row">
             <div class="col">
