--- a/templates/store/contacts.html
+++ b/templates/store/contacts.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <main class="container">
         <div class="row">
             <div class="col-md-6">
@@ -15,21 +22,21 @@
             <div class="col-md-6">
                 <form>
                     <h3>Напишіть нам</h3>
+                    {% csrf_token %}
                     <div class="form-group">
-                        <label for="name">Ім'я:</label>
-                        <input type="text" id="name" name="name" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Повідомлення:</label>
-                        <textarea id="message" name="message" class="form-control" required></textarea>
-                    </div>
+                        {% for fm in form %}
+                            {{ fm.label_tag }}
+                            {{ fm }}
+                            </div>
+                        {% endfor %}
                     <button type="submit" class="btn btn-primary">Надіслати</button>
                 </form>
             </div>
         </div>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 {% endblock content %}
