--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -35,8 +35,8 @@
         <!-- CATEGORIES SECTION-->
         <section class="pt-5">
             <header class="text-center">
-                <p class="small text-muted small text-uppercase mb-1">Carefully created collections</p>
-                <h2 class="h5 text-uppercase mb-4">Browse our categories</h2>
+                <p class="small text-muted small text-uppercase mb-1">Наша колекція</p>
+                <h2 class="h5 text-uppercase mb-4">Продивися наші намовірні категорії</h2>
             </header>
             <div class="row">
                 {% if categories %}
@@ -64,7 +64,7 @@
         <!-- TRENDING PRODUCTS-->
         <section class="py-5">
             <header>
-                <h2 class="h5 text-uppercase mb-4">Лучшие продукти</h2>
+                <h2 class="h5 text-uppercase mb-4">Найкращі продукти</h2>
             </header>
             <div class="row">
 
@@ -90,16 +90,17 @@
 
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
-                                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"
-                                                                                    href="#"><i
-                                                    class="far fa-heart"></i></a></li>
+{#                                            Todo add to like#}
+{#                                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"#}
+{#                                                                                    href="#"><i#}
+{#                                                    class="far fa-heart"></i></a></li>#}
                                             <li class="list-inline-item m-0 p-0">
                                                 {% comment %} <a class="btn btn-sm btn-dark" href="{% url 'store:add-to-cart' %}">Add to cart</a> {% endcomment %}
 
                                                 <form action="{% url 'store:add-to-cart' %}">
                                                     <input type="hidden" name="prod_id" value="{{ product.id }}"
                                                            id="product_id">
-                                                    <button type="submit" class="btn btn-sm btn-dark">Add to Cart
+                                                    <button type="submit" class="btn btn-sm btn-dark">Додати в кошик
                                                     </button>
                                                 </form>
 
