--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
 {#  </div>#}
 {#</header>#}
 <!-- navbar-->
-<header class="header bg-white">
+<header>
     <div class="container px-0 px-lg-3">
         <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -26,7 +26,10 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="{% url 'store:main' %}">Як вибрати велосипед?</a>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'store:home' %}">Головна</a>
+                    </li>
+                    <li class="nav-item dropdown active"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
                                                      data-toggle="dropdown" aria-haspopup="true"
                                                      aria-expanded="false">Крамниця</a>
                         <div class="dropdown-menu mt-3" aria-labelledby="pagesDropdown">
@@ -66,7 +69,7 @@
 
                                 <a class="dropdown-item border-0 transition-link" href="{% url 'store:profile' %}">Профіль</a>
                                 <a class="dropdown-item border-0 transition-link"
-                                   href="{% url 'store:cart' %}">Корзина</a>
+                                   href="{% url 'store:cart' %}">Кошик</a>
                                 <a class="dropdown-item border-0 transition-link" href="{% url 'store:orders' %}">Замовлення</a>
                                 <a class="dropdown-item border-0 transition-link" href="
 {% url 'store:password-change' %}">Змінити пароль</a>
