--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -87,8 +87,8 @@
                   <div class="col-lg-8">
                     <div class="media mb-3"><img class="rounded-circle" src="{% static 'img/customer-1.png' %}" alt="" width="50">
                       <div class="media-body ml-3">
-                        <h6 class="mb-0 text-uppercase">Jason Doe</h6>
-                        <p class="small text-muted mb-0 text-uppercase">20 May 2020</p>
+                        <h6 class="mb-0 text-uppercase">Міша</h6>
+                        <p class="small text-muted mb-0 text-uppercase">28.04.2023</p>
                         <ul class="list-inline mb-1 text-xs">
                           <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
                           <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
@@ -96,13 +96,13 @@
                           <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
                           <li class="list-inline-item m-0"><i class="fas fa-star-half-alt text-warning"></i></li>
                         </ul>
-                        <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="text-small mb-0 text-muted">"Велосипед - двоколісний транспортний засіб, що працює за допомогою людської енергії. Складається з рами, двох коліс, сідла та керма."</p>
                       </div>
                     </div>
                     <div class="media"><img class="rounded-circle" src="{% static 'img/customer-2.png' %}" alt="" width="50">
                       <div class="media-body ml-3">
-                        <h6 class="mb-0 text-uppercase">Jason Doe</h6>
-                        <p class="small text-muted mb-0 text-uppercase">20 May 2020</p>
+                        <h6 class="mb-0 text-uppercase">Максим</h6>
+                        <p class="small text-muted mb-0 text-uppercase">28.04.2023</p>
                         <ul class="list-inline mb-1 text-xs">
                           <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
                           <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
@@ -110,7 +110,7 @@
                           <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
                           <li class="list-inline-item m-0"><i class="fas fa-star-half-alt text-warning"></i></li>
                         </ul>
-                        <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="text-small mb-0 text-muted">"Велосипед - популярний транспортний засіб, який складається з двох коліс, рами, сідла та керма. Використовується для різних цілей, від розваг до спорту і пересування по місту."</p>
                       </div>
                     </div>
                   </div>
@@ -128,21 +128,25 @@
               {% for rp in related_products %}
               
                 <!-- PRODUCT-->
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6" style="height: 300px">
                   <div class="product text-center skel-loader">
                     <div class="d-block mb-3 position-relative">
                       <a class="d-block" href="{% url 'store:product-detail' rp.slug %}">
                         {% if rp.product_image %}
-                          <img class="img-fluid w-100" src="{{rp.product_image.url}}" alt="{{rp.title}}">
+                          <img class="img-fluid w-100" style="max-height: 170px" src="{{rp.product_image.url}}" alt="{{rp.title}}">
                         {% else %}
-                        <img class="img-fluid w-100" src="{% static 'img/product-1.jpg' %}" alt="{{rp.title}}">
+                        <img class="img-fluid w-100" style="height: 170px; width: 170px;" src=
+                                "{% static 'img/not_img.png' %}"
+                             alt="{{rp.title}}">
                         {% endif %}
                       </a>
 
                       <div class="product-overlay">
                         <ul class="mb-0 list-inline">
-                          <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="#"><i class="far fa-heart"></i></a></li>
-                          <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="{% url 'store:add-to-cart' %}">Add to cart</a></li>
+{#                            Todo add to like#}
+{#                          <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="#"><i class="far fa-heart"></i></a></li>#}
+                          <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="
+{% url 'store:add-to-cart' %}">Додати в кошик</a></li>
                         </ul>
                       </div>
                     </div>
