--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -32,148 +32,61 @@
                     <form action="#">
                         <div class="row">
                             <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="firstName">Ім'я</label>
-                                <input class="form-control form-control-lg" id="firstName" type="text" placeholder="Введіть своє
-                    ім'я">
-                            </div>
-                            <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="lastName">Прізвище</label>
-                                <input class="form-control form-control-lg" id="lastName" type="text"
-                                       placeholder="Введіть своє прізвище">
+                                <label class="text-small text-uppercase" for="firstName">Ім'я:</label>
+                                <div>{{ your_account }}</div>
                             </div>
                             <div class="col-lg-6 form-group">
                                 <label class="text-small text-uppercase" for="email">Адреса електронної пошти</label>
-                                <input class="form-control form-control-lg" id="email" type="email" placeholder="exemple@gamil
-                    .com">
-                            </div>
-                            <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="phone">Номер телефону</label>
-                                <input class="form-control form-control-lg" id="phone" type="tel"
-                                       placeholder="+123 456 78 90">
-                            </div>
-                            <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="company">Назва компанії
-                                    (необов'язково)</label>
-                                <input class="form-control form-control-lg" id="company" type="text"
-                                       placeholder="Назва вашої компанії">
+                                <div>{{ email }}</div>
                             </div>
                             <div class="col-lg-6 form-group">
                                 <label class="text-small text-uppercase" for="country">Країна</label>
-                                <input class="form-control form-control-lg" id="company" type="text"
-                                       placeholder="Ваша країна">
-                            </div>
-                            <div class="col-lg-12 form-group">
-                                <label class="text-small text-uppercase" for="address">Рядок адреси 1</label>
-                                <input class="form-control form-control-lg" id="address" type="text"
-                                       placeholder="Номер будинку та назва вулиці">
-                            </div>
-                            <div class="col-lg-12 form-group">
-                                <label class="text-small text-uppercase" for="address">Рядок адреси 2</label>
-                                <input class="form-control form-control-lg" id="addressalt" type="text"
-                                       placeholder="Квартира(необов’язково)">
+                                <div>{{ addresses.country }}</div>
                             </div>
                             <div class="col-lg-6 form-group">
                                 <label class="text-small text-uppercase" for="city">Місто</label>
-                                <input class="form-control form-control-lg" id="city" type="text">
+                                <div>{{ addresses.city }}</div>
                             </div>
                             <div class="col-lg-6 form-group">
                                 <label class="text-small text-uppercase" for="state">Штат/Країна</label>
-                                <input class="form-control form-control-lg" id="state" type="text">
+                                <div>{{ address.state }}</div>
                             </div>
                             <div class="col-lg-6 form-group">
                                 <div class="custom-control custom-checkbox">
-                                    <input class="custom-control-input" id="alternateAddressCheckbox" type="checkbox">
-                                    <label class="custom-control-label text-small" for="alternateAddressCheckbox">Альтернативна
-                                        платіжна адреса</label>
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="row d-none" id="alternateAddress">
-                                    <div class="col-12 mt-4">
-                                        <h2 class="h4 text-uppercase mb-4">Альтернативні платіжні реквізити</h2>
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="firstName2">Ім'я</label>
-                                        <input class="form-control form-control-lg" id="firstName2" type="text"
-                                               placeholder="Введіть своє ім'я">
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="lastName2">Прізвище</label>
-                                        <input class="form-control form-control-lg" id="lastName2" type="text"
-                                               placeholder="Введіть своє прізвище">
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="email2">Адреса електронної
-                                            пошти</label>
-                                        <input class="form-control form-control-lg" id="email2" type="email"
-                                               placeholder="exemple@gamil
-                    .com">
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="phone2">Номер телефону</label>
-                                        <input class="form-control form-control-lg" id="phone2" type="tel"
-                                               placeholder="+123 456 78 90">
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="company2">Назва компанії
-                                            (необов'язково)</label>
-                                        <input class="form-control form-control-lg" id="company2" type="text"
-                                               placeholder="Назва вашої компанії">
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="country2">Країна</label>
-                                        <select class="selectpicker country" id="country2" data-width="fit"
-                                                data-style="form-control form-control-lg"
-                                                data-title="Виберіть свою країну"></select>
-                                    </div>
-                                    <div class="col-lg-12 form-group">
-                                        <label class="text-small text-uppercase" for="address2">Рядок адреси 1</label>
-                                        <input class="form-control form-control-lg" id="address2" type="text"
-                                               placeholder="Номер будинку та назва вулиці">
-                                    </div>
-                                    <div class="col-lg-12 form-group">
-                                        <label class="text-small text-uppercase" for="address2">Рядок адреси 2</label>
-                                        <input class="form-control form-control-lg" id="addressalt2" type="text"
-                                               placeholder="Квартира">
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="city3">Місто</label>
-                                        <input class="form-control form-control-lg" id="city3" type="text">
-                                    </div>
-                                    <div class="col-lg-6 form-group">
-                                        <label class="text-small text-uppercase" for="state4">Штат/Країна</label>
-                                        <input class="form-control form-control-lg" id="state4" type="text">
-                                    </div>
+                                    <label class="text-small text-uppercase" for="city">Номер картки</label>
+                                    <div>{{ paying_ways.card_number }}</div>
                                 </div>
                             </div>
                             <div class="col-lg-12 form-group">
-                                <button class="btn btn-dark" type="submit">Зробити замовлення</button>
+{#                                <button  class="btn btn-dark" type="submit">Зробити замовлення</button>#}
+                                <a href="{% url 'store:orders' %}" class="btn btn-primary">Зробити замовлення</a>
+
                             </div>
                         </div>
                     </form>
                 </div>
                 <!-- ORDER SUMMARY-->
-                <div class="col-lg-4">
-                    <div class="card border-0 rounded-0 p-lg-4 bg-light">
-                        <div class="card-body">
-                            <h5 class="text-uppercase mb-4">Ваше замовлення</h5>
-                            <ul class="list-unstyled mb-0">
-                                <li class="d-flex align-items-center justify-content-between"><strong
-                                        class="text-uppercase small font-weight-bold">Проміжний
-                                    підсумок</strong><span class="text-muted small">${{ amount|intcomma }}</span>
-                                </li>
-                                <li class="d-flex align-items-center justify-content-between"><strong
-                                        class="text-uppercase small font-weight-bold">Вартість
-                                    доставки</strong><span class="text-muted small">+ ${{ shipping_amount }}</span>
-                                </li>
-                                <li class="border-bottom my-2"></li>
-                                <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase
-                    small font-weight-bold">Всього</strong><span>${{ total_amount|intcomma }}</span></li>
-                                <li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+{#                <div class="col-lg-4">#}
+{#                    <div class="card border-0 rounded-0 p-lg-4 bg-light">#}
+{#                        <div class="card-body">#}
+{#                            <h5 class="text-uppercase mb-4">Ваше замовлення</h5>#}
+{#                            <ul class="list-unstyled mb-0">#}
+{#                                <li class="d-flex align-items-center justify-content-between"><strong#}
+{#                                        class="text-uppercase small font-weight-bold">Проміжний#}
+{#                                    підсумок</strong><span class="text-muted small">${{ amount|intcomma }}</span>#}
+{#                                </li>#}
+{#                                <li class="d-flex align-items-center justify-content-between"><strong#}
+{#                                        class="text-uppercase small font-weight-bold">Вартість#}
+{#                                    доставки</strong><span class="text-muted small">+ ${{ shipping_amount }}</span>#}
+{#                                </li>#}
+{#                                <li class="border-bottom my-2"></li>#}
+{#                                <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase#}
+{#                    small font-weight-bold">Всього</strong><span>${{ total_amount|intcomma }}</span></li>#}
+{#                                <li>#}
+{#                            </ul>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
             </div>
         </section>
     </div>
