--- a/templates/account/add_paying_way.html
+++ b/templates/account/add_paying_way.html
@@ -56,4 +56,7 @@
             </div>
         </div>
     </div>
+    {% block script %}
+{#         <script src="{% static 'js/add_paying_way.js' %}" type="text/javascript"></script>#}
+    {% endblock script%}
 {% endblock content %}
